crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__find_free_group.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: ambiguous_group
expression: out
---
  × residue 1 contains more than one free target group: "Hydroxyl" at="6-
  │ Position", "Hydroxyl" at="Nonreducing End", and "Hydroxyl" at="Reducing
  │ End"
  help: to resolve this ambiguity, specify an exact functional group to
        modify
