crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__find_free_groups-2.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: all_groups_occupied
expression: out
---
  × no functional groups on residue 1 matching the target were free:
  │ "Hydroxyl" at="6-Position" is an acceptor, "Hydroxyl" at="Nonreducing End"
  │ is an acceptor, and "Hydroxyl" at="Reducing End" is an acceptor
