crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__find_free_groups-3.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: residue_not_in_polymer
expression: out
---
  × residue 1 does not belong to the current polymer
  help: the referenced residue was likely created by a different Polymerizer
        instance
