crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__find_multiple_specific_free_groups-2.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: still_invalid_target
expression: out
---
  × expected a target matching "Crazy" or "Hydroxyl", got "Amino" at="N-
  │ Terminal" of="N-Acetylmuramic Acid"
