crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__find_multiple_specific_free_groups-3.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: nonexistent_group
expression: out
---
  × the functional group "Amino" at="N-Terminal" does not exist on residue 1
