crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__find_multiple_specific_free_groups-4.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: multiple_errors
expression: out
---
  × failed to find multiple of the requested free groups

Error: 
  × the functional group "Hydroxyl" at="Nonreducing End" of residue 1 was
  │ already an acceptor, but must be free

Error: 
  × the functional group "Amino" at="N-Terminal" does not exist on residue 1
