crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__find_multiple_specific_free_groups.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: invalid_target
expression: out
---
  × expected a target matching "Hydroxyl", got "Amino" at="N-Terminal" of="N-
  │ Acetylmuramic Acid"
