crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__find_multiple_unambiguous_free_groups-3.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: groups_occupied
expression: out
---
  × too few functional groups on residue 1 matching the target were free
  │ (2/3): "Hydroxyl" at="6-Position" is free, "Hydroxyl" at="Nonreducing End"
  │ is an acceptor, and "Hydroxyl" at="Reducing End" is free
