crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__find_single_specific_free_groups-2.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: empty_groups
expression: out
---
  × received an empty group set, but you must provide at least one group to
  │ look for
